--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "astro": "^4.12.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.410.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -26,5 +27,8 @@
     "tailwindcss": "^3.4.6",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.3"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.17.7"
   }
 }
