feat: responsiveness and code refactor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,7 @@
     "checkJs": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     },
     "jsx": "react-jsx",
     "jsxImportSource": "react"
