--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.7",
-    "@types/react-slick": "^0.23.13"
+    "@types/react-slick": "^0.23.13",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.5"
   }
 }
